# dad-joke-api

./: dad_joke.py  manage.py  pyproject.toml
dad_joke_project/: asgi.py  settings.py  urls.py  wsgi.py
